add taken username loop and show statement

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,6 +14,7 @@
 
 <form class = "signup-form">
     <div>
+        <p class="hide" id="taken">That username is already taken! Try again.</p>
         <label for="username-signup">username:</label>
         <input type="text" id="username-signup" />
     </div>
