signup separated from login

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,20 +10,9 @@
     <div>
         <button type="submit">login</button>
     </div>
+    <div>
+        <a href="/signup">Sign Up Instead</a>
+    </div>
 </form>
 
-<form class = "signup-form">
-    <div>
-        <p class="hide" id="taken">That username is already taken! Try again.</p>
-        <label for="username-signup">username:</label>
-        <input type="text" id="username-signup" />
-    </div>
-    <div>
-        <label for="password-signup">password:</label>
-        <input type="password" id="password-signup" />
-    </div>
-    <div>
-        <button type="submit">signup</button>
-    </div>
-</form>
-<script src="/javascript/login.js"></script>
+<script src="/javascript/login.js"></script> 
