fixxed relogin bug

--- a/views/sign-up.handlebars
+++ b/views/sign-up.handlebars
@@ -9,7 +9,10 @@
         <input type="password" id="password-signup" />
     </div>
     <div>
-        <button type="submit">signup</button>
+        <button type="submit">Sign Up</button>
+    </div>
+    <div>
+        <a href="/login">Login Instead</a>
     </div>
 </form>
 <script src="/javascript/sign-up.js"></script>
