--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,7 +8,7 @@
         </div>
         <div>
             <label for="post-body">Blog Post Text</label>
-            <input type="text" name="post-body" id="post-body">
+            <textarea name="post-body" id="post-body" cols="30" rows="10"></textarea>
         </div>
         <button type="submit" class="btn">Create Post</button>
     </form>
