--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -8,7 +8,7 @@
             <input type="text" name="post-title" value="{{post.title}}" />
         </div>
         <div>
-            <input type="text" name="post-body" value="{{post.post_body}}">
+            <textarea name="post-body" cols="30" rows="10">{{post.post_body}}</textarea>
         </div>
         <div>
             By you on {{format_date post.created_at}}
