--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,12 +2,13 @@
     box-sizing: border-box;
 }
   
-  body, html {
+ body, html {
     height: 100%;
     padding: 0;
     margin: 0;
     font-family: sans-serif;
     color: #333;
+    background-color: rgb(245, 250, 219);
 }
   
 a {
@@ -40,8 +41,15 @@ button:hover {
     margin: 0;
     padding: 0;
 }
-/* 
+
+ol li {
+    list-style: none;
+    padding: 20px;
+}
+
 textarea, input {
+    background-color: rgb(246, 250, 227);
+    font-family: Arial, Helvetica, sans-serif;
     padding: .5%;
     border-radius: 5px;
     border: 1px solid #ccc;
@@ -50,12 +58,12 @@ textarea, input {
 textarea:focus, input:focus {
     outline: none;
     border: 1px solid #5b8b00;
-} */
+}
 
-/* textarea {
+textarea {
     min-width: 40%;
     min-height: 100px;
-} */
+}
 
 form > div {
     margin-bottom: 2%;
@@ -135,8 +143,25 @@ background-color: #d41414;
 }
 
 .post {
+    height: auto;
     margin-bottom: 2%; 
-    line-height: 150%;
+    background-color: rgb(193, 197, 175);
+    border-radius: 15px;
+}
+
+.post .title {
+   padding: 20px 0 10px 20px;
+}
+
+.post-body {
+   padding: 0 20px 10px 20px;
+}
+
+.post-body a {
+   padding: 0 0 10px 20px;
+    background-color: black;
+    padding: 5px;
+    border-radius: 15px;
 }
 
 #post-body {
@@ -145,15 +170,25 @@ background-color: #d41414;
     overflow: hidden scroll;
 }
 
-.post .title span {
-    font-style: italic;
-    font-size: 90%;
-    color: #7d7d7d;
+.post .title a {
+    padding: 10px;
+    background-color: black;
+    border-radius: 15px;
+    font-size: 20px;
+    color: #5b8b00;
+    margin: auto;
+}
+
+.post .title a:hover {
+    color: #80c501;
+    transition: .4s;
 }
 
 .edit-link {
     display: block;
     margin: -1.5% 0 2% 0;
+    padding-left: 20px;
+    width: fit-content;
 }
 
 .comment-form {
@@ -163,6 +198,7 @@ background-color: #d41414;
 .comment {
     padding: 1%;
     margin-bottom: 1%;
+    border-radius: 15px;
 }
 
 .comment:nth-child(odd) {
@@ -170,9 +206,13 @@ background-color: #d41414;
 }
 
 .comment .meta {
+    width: fit-content;
+    border-radius: 15px;
+    padding: 4px;
+    background-color: black;
+    color: #5b8b00;
     font-size: 90%;
     margin-bottom: .5%;
-    opacity: .6;
 }
 
 .new-post-form input {
