--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,6 +1,6 @@
 <article class="post">
     <div class="title">
-        <a href="/post/{{id}}">{{title}}</a>
+        <a href="/post/{{id}}">{{title}}</a><span class="post-author">Posted by: {{user.username}} on {{format_date created_at}} </span>
     </div>
     <div class="post-body">
         <p>{{post_body}}</p>
