add styling, icons and longer blog posts

--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -11,7 +11,7 @@
             <label for="post-body">Blog Post Text</label>
             <textarea name="post-body" id="post-body" cols="30" rows="10"></textarea>
         </div>
-        <button type="submit" class="btn">Create Post</button>
+        <button type="submit" class="btn"><i class="fas fa-plus"></i> Create Post</button>
     </form>
 </section>
 
