--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,4 +1,4 @@
-<button class="create-post">Create New Blog Post</button>
+<button class="create-post"><i class="fas fa-plus"></i> Create New Blog Post</button>
 
 {{#if posts.length}}
 <section>
