--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Blog AC</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
@@ -22,7 +23,7 @@
                 {{/if}}
             </nav>
             <h1>
-                <a href="/">Tech Blog</a>
+                <a href="/"><i class="fas fa-laptop-code"></i> Tech Blog</a>
             </h1>
         </header>
         <main>
