--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -5,18 +5,20 @@
     </h2>
     <form class="edit-post-form">
         <div>
+            <label for="post-title">Title</label>
             <input type="text" name="post-title" value="{{post.title}}" />
         </div>
         <div>
-            <textarea name="post-body" cols="30" rows="10">{{post.post_body}}</textarea>
+            <label for="post-body">Blog Post Text</label>
+            <textarea name="post-body" cols="30" rows="10" id="post-body">{{post.post_body}}</textarea>
         </div>
         <div>
             By you on {{format_date post.created_at}}
             |
             <a href="/post/{{post.id}}">{{post.comments.length}}{{format_plural " comment" post.comments.length}}</a>
         </div>
-        <button type="submit">Save post</button>
-        <button type="button" class="delete-post-btn">Delete Post</button>
+        <button type="submit"><i class="fas fa-save"></i> Save post</button>
+        <button type="button" class="delete-post-btn"><i class="fas fa-trash-alt"></i> Delete Post</button>
     </form>
 
     <form class="comment-form">
@@ -25,7 +27,7 @@
         </div>
 
         <div>
-            <button type="submit">add comment</button>
+            <button type="submit"><i class="fas fa-comments"></i> Add Comment</button>
         </div>
     </form>
 
