--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -5,7 +5,7 @@
     <div class="post-body">
         <p>{{post_body}}</p>
         |
-        <a href="/post/{{id}}">{{comments.length}} {{format_plural "comment" comments.length}}</a>
+        <a href="/post/{{id}}"><i class="fas fa-comments"></i> {{comments.length}} {{format_plural "comment" comments.length}}</a>
     </div>
 </article>
 
