--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,5 +1,6 @@
 <form class="login-form">
     <div>
+        <p class="hide" id="not-found">That username does not exist! Try again or join.</p>
         <label for="username-login">username:</label>
         <input type="text" id="username-login" />
     </div>
